--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">My Application</string>
+	<string name="poster_name_wrath_of_man">wrath_of_man_poster</string>
+	<string name="genre_action_movie">боевики</string>
+	<string name="launch_date_wrath_of_man">22.04.2021</string>
+	<string name="shape_rectangle_border_name">rectangle_rounded_border</string>
+	<string name="movie_name_wrath_of_man">Гнев человеческий</string>
+	<string name="circle_border_name">circle_border</string>
+	<string name="age_restriction_18">18+</string>
+	<string name="star_filled">star_filled</string>
+	<string name="star_empty">star_empty</string>
+	<string name="description_wrath_of_man">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
+	<string name="title_actors">Актеры</string>
+	<string name="actor_name_jason_statham">Джейсон Стэйтем</string>
+	<string name="actor_name_holt_mccallany">Холт Макккэллани</string>
+	<string name="actor_name_josh_hartnett">Джош Харнетт</string>
+	<string name="actor_portrait_jason_statham">actor_portrait_jason_statham</string>
+	<string name="actor_portrait_holt_mccallany">actor_portrait_holt_mccallany</string>
+	<string name="underline">underline</string>
 </resources>
