--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,31 @@
 	<string name="actor_portrait_jason_statham">actor_portrait_jason_statham</string>
 	<string name="actor_portrait_holt_mccallany">actor_portrait_holt_mccallany</string>
 	<string name="underline">underline</string>
+	<string name="popular_now">Популярное сейчас</string>
+	<string name="magnifying_glass">magnifying_glass</string>
+	<string name="main_click_message">Название: %1$s</string>
+	<string name="main_empty_message">Тут должен был быть текст</string>
+
+	<string-array name="genres">
+		<item>боевики</item>
+		<item>драмы</item>
+		<item>комедии</item>
+		<item>артхаус</item>
+		<item>мелодрамы</item>
+		<item>аниме</item>
+		<item>байопики</item>
+		<item>вестерны</item>
+		<item>военные</item>
+		<item>детективы</item>
+		<item>детские</item>
+		<item>документалки</item>
+		<item>мюзиклы</item>
+		<item>приключения</item>
+		<item>семейные</item>
+		<item>триллеры</item>
+		<item>ужасы</item>
+		<item>фантастика</item>
+		<item>фэнтези</item>
+	</string-array>
+
 </resources>
