--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,8 @@
 	<string name="star_empty">star_empty</string>
 	<string name="description_wrath_of_man">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
 	<string name="title_actors">Актеры</string>
-	<string name="actor_name_jason_statham">Джейсон Стэйтем</string>
-	<string name="actor_name_holt_mccallany">Холт Макккэллани</string>
-	<string name="actor_name_josh_hartnett">Джош Харнетт</string>
-	<string name="actor_portrait_jason_statham">actor_portrait_jason_statham</string>
-	<string name="actor_portrait_holt_mccallany">actor_portrait_holt_mccallany</string>
+	<string name="actor_portrait">actor_portrait</string>
+	<string name="actor_name">actor_name</string>
 	<string name="underline">underline</string>
 
 	<string name="popular_now">Популярное сейчас</string>
