--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+	<string name="app_name">My Application</string>
 	<string name="poster_name_wrath_of_man">wrath_of_man_poster</string>
 	<string name="genre_action_movie">боевики</string>
 	<string name="launch_date_wrath_of_man">22.04.2021</string>
@@ -11,17 +11,15 @@
 	<string name="star_empty">star_empty</string>
 	<string name="description_wrath_of_man">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
 	<string name="title_actors">Актеры</string>
-	<string name="actor_name_jason_statham">Джейсон Стэйтем</string>
-	<string name="actor_name_holt_mccallany">Холт Макккэллани</string>
-	<string name="actor_name_josh_hartnett">Джош Харнетт</string>
-	<string name="actor_portrait_jason_statham">actor_portrait_jason_statham</string>
-	<string name="actor_portrait_holt_mccallany">actor_portrait_holt_mccallany</string>
+	<string name="actor_portrait">actor_portrait</string>
+	<string name="actor_name">actor_name</string>
 	<string name="underline">underline</string>
 
 	<string name="popular_now">Популярное сейчас</string>
 	<string name="magnifying_glass">magnifying_glass</string>
 	<string name="main_click_message">Название: %1$s</string>
 	<string name="main_empty_message">Тут должен был быть текст</string>
+	<string name="poster_name">poster_name</string>
 
 	<string-array name="genres">
 		<item>боевики</item>
@@ -44,5 +42,20 @@
 		<item>фантастика</item>
 		<item>фэнтези</item>
 	</string-array>
+
+	<string name="tag_movie">movie</string>
+	<string name="tag_saved_movie_list">savedMovieList</string>
+	<string name="tag_movie_list">movieList</string>
+	<string name="tag_movie_details">movieDetails</string>
+	<string name="tag_profile">profile</string>
+
+	<string name="profile_name">Екатерина</string>
+	<string name="profile_email">17optimistic@gmail.com</string>
+	<string name="profile_interests">Интересы</string>
+	<string name="profile_private_data">Личные данные</string>
+	<string name="profile_settings">Настройки</string>
+	<string name="profile_app">Приложение</string>
+	<string name="profile_button_exit">Выйти</string>
+
 
 </resources>
